fix: Load smaller images on mobile devices

--- a/source/sass/4-layout/_download.sass
+++ b/source/sass/4-layout/_download.sass
@@ -7,6 +7,7 @@
     text-align: center
     color: white
     @media screen and (max-width: 680px)
+        background: url("../img/downloadBackgroundSmall.jpg") no-repeat
         margin-top: 75px
         padding: 60px
     h2
@@ -15,8 +16,8 @@
         text-transform: uppercase
         font-weight: 900
         margin: 0
-            @media screen and (max-width: 680px)
-                font-size: 44px
+        @media screen and (max-width: 680px)
+            font-size: 44px
 
     p
         width: 100%
